<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contraction Timer</string>
    <string name="view_activity_name">View Contraction</string>
    <string name="edit_activity_name">Edit Contraction</string>
    <string name="menu_reset">Reset</string>
    <string name="reset_dialog_title">Reset Confirmation</string>
    <string name="reset_dialog_message">Are you sure you want to reset and remove all contractions?</string>
    <string name="reset_dialog_confirm">Yes</string>
    <string name="reset_dialog_cancel">Cancel</string>
    <string name="menu_add">Add Contraction</string>
    <string name="menu_share_averages">Share Averages</string>
    <string name="menu_share_all">Share All</string>
    <string name="share_pick_application">Share To:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="donate_header">While this application is provided for free, please consider supporting further development by donating to the developer.</string>
    <string name="donate_paypal_title">PayPal</string>
    <string name="donate_paypal_description">You can choose how much you want to donate after clicking the button</string>
    <string name="donate_paypal_button">Donate via PayPal</string>
    <string name="donate_in_app_title">Google Play In-App Billing</string>
    <string name="donate_in_app_description">Donate via Google Play In-App Billing. Note that Google takes 30% off every donation</string>
    <string name="donate_in_app_spinner_text">Select a donation amount</string>
    <string name="donate_in_app_button">Donate</string>
    <string-array name="donate_in_app_name_array">
        <item>$1 Donation</item>
        <item>$2 Donation</item>
        <item>$3 Donation</item>
        <item>$5 Donation</item>
        <item>$10 Donation</item>
        <item>$15 Donation</item>
    </string-array>
    <string-array name="donate_in_app_sku_array">
        <item>contractiontimer.donations.1</item>
        <item>contractiontimer.donations.2</item>
        <item>contractiontimer.donations.3</item>
        <item>contractiontimer.donations.5</item>
        <item>contractiontimer.donations.10</item>
        <item>contractiontimer.donations.15</item>
    </string-array>
    <string name="note_dialog_title_add">Add Note</string>
    <string name="note_dialog_title_edit">Edit Note</string>
    <string name="note_dialog_save">Save</string>
    <string name="note_dialog_cancel">Cancel</string>
    <string name="menu_context_action_mode_title">%1$d Selected</string>
    <string name="menu_context_view_condensed">View</string>
    <string name="menu_context_view">View Details</string>

    <plurals name="menu_context_delete">
        <item quantity="one">Delete</item>
        <item quantity="other">Delete All</item>
    </plurals>

    <string name="contraction_start">Start Contraction</string>
    <string name="contraction_end">Stop Contraction</string>
    <string name="list_loading">Loading contractions…</string>
    <string name="list_item_loading">Loading</string>
    <string name="list_empty"></string>
    <string name="list_header_duration">Duration</string>
    <string name="list_header_frequency">Frequency</string>
    <string name="contraction_average">Average</string>
    <string name="detail_start_time_label">Start Time</string>
    <string name="detail_end_time_label">End Time</string>
    <string name="detail_duration_label">Duration</string>
    <string name="detail_note_label">Note</string>
    <string name="detail_previous_page">&lt; Previous</string>
    <string name="detail_next_page">Next &gt;</string>
    <string name="edit_start_time_error_overlap">Error: cannot start during another contraction</string>
    <string name="edit_end_time_error_order">Error: cannot end before it begins</string>
    <string name="edit_end_time_error_overlap">Error: cannot end during another contraction</string>
    <string name="edit_time_error_overlap">Error: cannot overlap another contraction</string>
    <string name="divider">Divider</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="edit_ongoing_error">Error: Cannot edit ongoing contractions</string>
    <string name="toggle_appwidget_label">Contraction Toggle</string>
    <string name="control_appwidget_label">Contraction Controls</string>
    <string name="application_launch">Launch Contraction Timer</string>
    <string name="average_duration_label">Average Duration:</string>
    <string name="average_frequency_label">Average Frequency:</string>
    <string name="appwidget_contraction_start">Start</string>
    <string name="appwidget_contraction_stop">Stop</string>
    <string name="detail_appwidget_label">Contraction Details</string>
    <string name="duration_ongoing">Timing</string>
    <string name="settings">Settings</string>
    <string name="pref_settings_category">Settings</string>
    <string name="pref_settings_keep_screen_on_summary">Keep the screen on when on the main contraction screen</string>
    <string name="pref_settings_keep_screen_on_title">Keep Screen On</string>
    <string name="pref_settings_lock_portrait_summary">Locks the screen in Portrait orientation, preventing all screens from rotating</string>
    <string name="pref_settings_lock_portrait_title">Lock in Portrait</string>
    <string name="pref_settings_average_time_frame_title">Averages Time Frame</string>
    <string name="pref_settings_average_time_frame_summary">Average Duration/Frequency Time Frame:</string>
    <string name="pref_settings_average_time_frame_dialog_title">Choose Average Duration/Frequency Time Frame</string>
    <string name="pref_settings_average_time_frame_default">3600000</string>
    <string name="pref_appwidget_category">Application Widget</string>
    <string name="pref_appwidget_background_title">Widget Background</string>
    <string name="pref_appwidget_background_dialog_title">Choose Widget Background</string>
    <string name="pref_appwidget_background_default">light</string>
    <string name="pref_privacy_category">Privacy</string>
    <string name="pref_privacy_analytics_title">Send Usage Statistics</string>
    <string name="pref_privacy_analytics_summary">Help make Contraction Timer better by sending anonymous data to Google Analytics</string>

</resources>