<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="5dp">
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1" />
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:gravity="center_horizontal"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/list_header_duration" />
		<TextView
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:gravity="center_horizontal"
			android:layout_weight="1"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/list_header_frequency" />
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1">
		<ListView
			android:id="@id/android:list"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />
		<TextView
			android:id="@id/android:empty"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="top|center_horizontal"
			android:text="@string/list_loading" />
	</LinearLayout>
</LinearLayout>