<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/appwidget_light_bg" >

    <ImageButton
        android:id="@+id/application_launch"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:background="@drawable/appwidget_button_left"
        android:contentDescription="@string/application_launch"
        android:padding="@dimen/appwidget_padding"
        android:src="@drawable/icon" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/application_launch"
        android:padding="@dimen/appwidget_padding" >

        <TextView
            android:id="@+id/average_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/average_duration_label"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/average_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/average_duration_label"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/average_frequency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average_duration_label"
            android:paddingRight="10dp"
            android:text="@string/average_frequency_label"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/average_frequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/average_duration"
            android:layout_toRightOf="@id/average_frequency_label"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <Button
        android:id="@+id/contraction_toggle_off"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/appwidget_button_right"
        android:drawableBottom="@android:drawable/button_onoff_indicator_off"
        android:padding="@dimen/appwidget_padding"
        android:text="@string/appwidget_contraction_start"
        android:textColor="@android:color/primary_text_light" />

    <Button
        android:id="@+id/contraction_toggle_on"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/appwidget_button_right"
        android:drawableBottom="@android:drawable/button_onoff_indicator_on"
        android:padding="@dimen/appwidget_padding"
        android:text="@string/appwidget_contraction_stop"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone" />

</RelativeLayout>