<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/appwidget_dark_bg"
	android:orientation="horizontal" >

	<ImageButton
		android:id="@+id/application_launch"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:background="@drawable/appwidget_button_left"
		android:padding="@dimen/appwidget_padding"
		android:src="@drawable/icon" />

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="1"
		android:orientation="vertical"
		android:padding="@dimen/appwidget_padding" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="left|bottom"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/average_duration_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="10dp"
				android:text="@string/average_duration_label"
				android:textColor="@android:color/primary_text_dark" />

			<TextView
				android:id="@+id/average_duration"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/primary_text_dark" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:gravity="left|top"
			android:orientation="horizontal" >

			<TextView
				android:id="@+id/average_frequency_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="10dp"
				android:text="@string/average_frequency_label"
				android:textColor="@android:color/primary_text_dark" />

			<TextView
				android:id="@+id/average_frequency"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/primary_text_dark" />
		</LinearLayout>
	</LinearLayout>

	<Button
		android:id="@+id/contraction_toggle_off"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:background="@drawable/appwidget_button_right"
		android:drawableBottom="@android:drawable/button_onoff_indicator_off"
		android:padding="@dimen/appwidget_padding"
		android:text="@string/appwidget_contraction_start"
		android:textColor="@android:color/primary_text_dark" />

	<Button
		android:id="@+id/contraction_toggle_on"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:background="@drawable/appwidget_button_right"
		android:drawableBottom="@android:drawable/button_onoff_indicator_on"
		android:padding="@dimen/appwidget_padding"
		android:text="@string/appwidget_contraction_stop"
		android:textColor="@android:color/primary_text_dark"
		android:visibility="gone" />

</LinearLayout>