<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/outer_padding" >

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_start_time_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/start_time_label"
        android:paddingLeft="@dimen/indent_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/start_time_label"
        android:paddingLeft="@dimen/indent_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_time"
        android:paddingTop="@dimen/dividing_padding"
        android:text="@string/detail_end_time_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/end_time_label"
        android:paddingLeft="@dimen/indent_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/end_time_label"
        android:paddingLeft="@dimen/indent_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/duration_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/end_time"
        android:contentDescription="@string/divider"
        android:focusable="false"
        android:paddingBottom="@dimen/dividing_padding"
        android:paddingTop="@dimen/dividing_padding"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration_divider"
        android:text="@string/detail_duration_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/duration_divider"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/note_divider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/duration"
        android:contentDescription="@string/divider"
        android:focusable="false"
        android:paddingBottom="@dimen/dividing_padding"
        android:paddingTop="@dimen/dividing_padding"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_textfield" />

    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_divider"
        android:text="@string/detail_note_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_label"
        android:paddingLeft="@dimen/indent_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>